Addressed issues in _helpers.less for generating spacing and border classes.

--- a/html/less/shared/_helpers.less
+++ b/html/less/shared/_helpers.less
@@ -13,175 +13,91 @@
 }
 
 
+// generated positioning classes
 
+@positions: '', '-top', '-left', '-right', '-bottom';
 
+.createPositioning(@type) {
+    .-(@x: length(@positions)) when (@x > 0) {
+        @position: e(extract(@positions, @x));
 
+        .@{type}@{position} { @{type}@{position}: @spacing; }
 
+        .@{type}@{position}--sml { @{type}@{position}: @spacing; }
 
+        .@{type}@{position}--med { @{type}@{position}: @spacing * 2; }
 
+        .@{type}@{position}--lge { @{type}@{position}: @spacing * 3; }
 
-
-
-
-
-// generated classes
-
-@types: 'jacquie', 'margin', 'padding';
-@positions: 'wheeler', '', 'top', 'left', 'right', 'bottom';
-
-// .for(@types); .-each(@type) {
-    // .margin-@{type} {
-    //     // e(@{type}): 'jacquie';
-    // }
-
-    // .for(@positions); .-each(@position) {
-        // .@{type} {
-        //     @{type}: 'jacquie';
-        // }
-    // }
-// }
-
-// .for(@types); .-each(@type) {
-//     @t: e(@type);
-
-//     .@{t} {
-//         test: jacquie;
-//         @{t}: @spacing;
-//     }
-
-//     .for(@positions); .-each(@position) {
-//     }
-// }
-
-// types
-.-(@x: length(@types)) when (@x > 0) {
-    @type: e(extract(@types, @x));
-
-    // positions
-    .-(@y: length(@positions)) when (@y > 0) {
-        @position: e(extract(@positions, @y));
-
-        .@{position} {
-            background: @position;
+        @media screen and (min-width: @small-medium) {
+            .@{type}@{position} { @{type}@{position}: @spacing * 2; }
         }
 
-        .-((@y - 1));
+        @media screen and (min-width: @medium-large) {
+            .@{type}@{position} { @{type}@{position}: @spacing * 3; }
+        }
+
+        .-((@x - 1));
     } .-;
+}
+
+.createPositioning(margin);
+.createPositioning(padding);
 
 
-    .-((@x - 1));
-} .-;
+// borders
 
+@border: 1px solid @grey-light;
 
+.createBorders() {
+    .-(@x: length(@positions)) when (@x > 0) {
+        @position: e(extract(@positions, @x));
 
+        .border@{position} { border@{position}: @border; }
 
+        .no-border@{position} { border@{position}: none; }
 
+        @media screen and (min-width: @small) {
+            .border@{position}--s { border@{position}: @border; }
 
-.createPositioning(@type, @position: '') {
-    // margin
-
-    .@{type}@{position} {
-        @{type}: @spacing
-    }
-
-    .margin@{position} {
-        .margin(@position, @spacing);
-    }
-
-    .margin@{position}--xs {
-        .margin(@position, @spacing / 2);
-    }
-
-    .margin@{position}--m {
-        .margin(@position, @spacing * 2);
-    }
-
-    .margin@{position}--l {
-        .margin(@position, @spacing * 3);
-    }
-
-    .margin@{position}--default {
-        .margin(@position, @spacing);
-    }
-
-    // padding
-
-    .padding@{position} {
-        .padding(@position, @spacing);
-    }
-
-    .padding@{position}--xs {
-        .padding(@position, @spacing / 2);
-    }
-
-    .padding@{position}--m {
-        .padding(@position, @spacing * 2);
-    }
-
-    .padding@{position}--l {
-        .padding(@position, @spacing * 3);
-    }
-
-    .padding@{position}--default {
-        .padding(@position, @spacing);
-    }
-
-    @media screen and (min-width: @medium) {
-        .margin@{position}--default {
-            .margin(@position, @spacing * 2);
+            .no-border@{position}--s { border@{position}: none; }
         }
 
-        .padding@{position}--default {
-            .padding(@position, @spacing * 2);
+        @media screen and (min-width: @small-medium) {
+            .border@{position}--sm { border@{position}: @border; }
+
+            .no-border@{position}--sm { border@{position}: none; }
         }
-    }
+
+        @media screen and (min-width: @medium) {
+            .border@{position}--m { border@{position}: @border; }
+
+            .no-border@{position}--m { border@{position}: none; }
+        }
+
+        @media screen and (min-width: @medium-large) {
+            .border@{position}--ml { border@{position}: @border; }
+
+            .no-border@{position}--ml { border@{position}: none; }
+        }
+
+        @media screen and (min-width: @large) {
+            .border@{position}--l { border@{position}: @border; }
+
+            .no-border@{position}--l { border@{position}: none; }
+        }
+
+        @media screen and (min-width: @extra-large) {
+            .border@{position}--xl { border@{position}: @border; }
+
+            .no-border@{position}--xl { border@{position}: none; }
+        }
+
+        .-((@x - 1));
+    } .-;
 }
 
-// .createPositioning('');
-// .createPositioning(-top);
-// .createPositioning(-bottom);
-// .createPositioning(-left);
-// .createPositioning(-right);
-
-.margin('', @value) {
-    margin: @value;
-}
-
-.margin(-top, @value) {
-    margin-top: @value;
-}
-
-.margin(-bottom, @value) {
-    margin-bottom: @value;
-}
-
-.margin(-left, @value) {
-    margin-left: @value;
-}
-
-.margin(-right, @value) {
-    margin-right: @value;
-}
-
-.padding('', @value) {
-    padding: @value;
-}
-
-.padding(-top, @value) {
-    padding-top: @value;
-}
-
-.padding(-bottom, @value) {
-    padding-bottom: @value;
-}
-
-.padding(-left, @value) {
-    padding-left: @value;
-}
-
-.padding(-right, @value) {
-    padding-right: @value;
-}
+.createBorders();
 
 
 // floats
@@ -271,73 +187,4 @@
     width: 100%;
     text-overflow: ellipsis;
     overflow: hidden;
-}
-
-
-// borders
-
-@default-border: 1px solid @grey-light;
-
-.createBorders(@media: '') {
-    .border@{media} {
-        border: @default-border;
-    }
-
-    .border-top@{media} {
-        border-top: @default-border;
-    }
-
-    .border-right@{media} {
-        border-right: @default-border;
-    }
-
-    .border-bottom@{media} {
-        border-bottom: @default-border;
-    }
-
-    .border-left@{media} {
-        border-left: @default-border;
-    }
-
-    .no-border@{media} {
-        border: none;
-    }
-
-    .no-border-top@{media} {
-        border-top: none;
-    }
-
-    .no-border-right@{media} {
-        border-right: none;
-    }
-
-    .no-border-bottom@{media} {
-        border-bottom: none;
-    }
-
-    .no-border-left@{media} {
-        border-left: none;
-    }
-}
-
-.createBorders();
-
-.media-small() {
-    .createBorders('--s');
-}
-
-.media-small-medium() {
-    .createBorders('--sm');
-}
-
-.media-medium() {
-    .createBorders('--m');
-}
-
-.media-medium-large() {
-    .createBorders('--ml');
-}
-
-.media-large() {
-    .createBorders('--l');
 }
